// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens with some wallets without crashing 1`] = `
<ModalPassword
  walletList={
    Array [
      Object {
        "address": "asdf",
        "eth": "1",
        "nct": "1",
      },
      Object {
        "address": "demo",
        "eth": "1",
        "nct": "1",
      },
    ]
  }
>
  <div
    className="ModalPassword"
  >
    <CSSTransition
      classNames="open"
      in={true}
      mountOnEnter={true}
      timeout={300}
      unmountOnExit={true}
    >
      <div>
        <div>
          <div
            className="ModalBackground"
            key="background"
            onClick={[Function]}
          />
          <CSSTransition
            classNames="slide"
            in={true}
            timeout={300}
            unmountOnExit={true}
          >
            <div>
              <div>
                <div
                  className="ModalContent"
                  key="content"
                >
                  <header
                    className="ModalContentHeader"
                  >
                    Unlock your wallet.
                  </header>
                  <form>
                    <label
                      htmlFor="address"
                    >
                      Wallet Address
                    </label>
                    <select
                      id="address"
                      onChange={[Function]}
                      value=""
                    >
                      <option
                        key="asdf"
                        value="asdf"
                      >
                        asdf
                      </option>
                      <option
                        key="demo"
                        value="demo"
                      >
                        demo
                      </option>
                    </select>
                    <AnimatedInput
                      input_id="nectar"
                      placeholder="Nectar (NCT)"
                      readonly="0"
                      type="number"
                    >
                      <div
                        className="AnimatedInput"
                      >
                        <CSSTransition
                          classNames="label"
                          in={false}
                          timeout={300}
                        >
                          <div />
                        </CSSTransition>
                        <input
                          className="AnimatedInput-Input AnimatedInput-Readonly"
                          id="nectar"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          readOnly="0"
                          type="number"
                          value="0"
                        />
                      </div>
                    </AnimatedInput>
                    <AnimatedInput
                      input_id="eth"
                      placeholder="Ether (ETH)"
                      readonly="0"
                      type="number"
                    >
                      <div
                        className="AnimatedInput"
                      >
                        <CSSTransition
                          classNames="label"
                          in={false}
                          timeout={300}
                        >
                          <div />
                        </CSSTransition>
                        <input
                          className="AnimatedInput-Input AnimatedInput-Readonly"
                          id="eth"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          readOnly="0"
                          type="number"
                          value="0"
                        />
                      </div>
                    </AnimatedInput>
                    <AnimatedInput
                      error={null}
                      input_id="password"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Wallet Password"
                      type="password"
                    >
                      <div
                        className="AnimatedInput"
                      >
                        <CSSTransition
                          classNames="label"
                          in={false}
                          timeout={300}
                        >
                          <div />
                        </CSSTransition>
                        <input
                          className="AnimatedInput-Input"
                          id="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          type="password"
                          value=""
                        />
                      </div>
                    </AnimatedInput>
                  </form>
                  <p
                    className="ModalMessage"
                  >
                    Your bounty will post in the background. When it has been posted to the chain, it will appear on the sidebar. If there are any errors, we will let you know.
                  </p>
                  <span
                    className="Modal-Button-Bar"
                  >
                    <Button
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Unlock
                      </button>
                    </Button>
                    <Button
                      cancel={true}
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat-cancel"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </Button>
                  </span>
                </div>
              </div>
            </div>
          </CSSTransition>
        </div>
      </div>
    </CSSTransition>
  </div>
</ModalPassword>
`;

exports[`opens without crashing 1`] = `
<ModalPassword
  walletList={Array []}
>
  <div
    className="ModalPassword"
  >
    <CSSTransition
      classNames="open"
      in={true}
      mountOnEnter={true}
      timeout={300}
      unmountOnExit={true}
    >
      <div>
        <div>
          <div
            className="ModalBackground"
            key="background"
            onClick={[Function]}
          />
          <CSSTransition
            classNames="slide"
            in={true}
            timeout={300}
            unmountOnExit={true}
          >
            <div>
              <div>
                <div
                  className="ModalContent"
                  key="content"
                >
                  <header
                    className="ModalContentHeader"
                  >
                    Create a wallet
                  </header>
                  <form>
                    <AnimatedInput
                      error={null}
                      input_id="password"
                      onChange={[Function]}
                      onKeyPress={[Function]}
                      placeholder="Wallet Password"
                      type="password"
                    >
                      <div
                        className="AnimatedInput"
                      >
                        <CSSTransition
                          classNames="label"
                          in={false}
                          timeout={300}
                        >
                          <div />
                        </CSSTransition>
                        <input
                          className="AnimatedInput-Input"
                          id="password"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyPress={[Function]}
                          type="password"
                          value=""
                        />
                      </div>
                    </AnimatedInput>
                  </form>
                  <p
                    className="ModalMessage"
                  >
                    Your bounty will post in the background. When it has been posted to the chain, it will appear on the sidebar. If there are any errors, we will let you know.
                  </p>
                  <span
                    className="Modal-Button-Bar"
                  >
                    <Button
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Create
                      </button>
                    </Button>
                    <Button
                      cancel={true}
                      disabled={false}
                      flat={true}
                      onClick={[Function]}
                    >
                      <button
                        className="Button flat-cancel"
                        disabled={false}
                        onClick={[Function]}
                      >
                        Cancel
                      </button>
                    </Button>
                  </span>
                </div>
              </div>
            </div>
          </CSSTransition>
        </div>
      </div>
    </CSSTransition>
  </div>
</ModalPassword>
`;

exports[`renders without crashing 1`] = `
<div
  class="ModalPassword"
>
  <div>
    
  </div>
</div>
`;
